--- a/ninja_gold/templates/index.html
+++ b/ninja_gold/templates/index.html
@@ -53,7 +53,9 @@
 
         <div class="activity-log" style="overflow: scroll; height: 200px;">
 
-            {{ session["ledger"] }}
+            {% for entry in session["ledgerList"] %}
+                <p>{{entry}}</p>
+            {% endfor %}
 
         </div>
 
