--- a/ninja_gold/templates/index.html
+++ b/ninja_gold/templates/index.html
@@ -5,57 +5,67 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Ninja Money</title>
+
+    <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='css/style.css') }}">
+    <script type="text/javascript" src="{{ url_for('static', filename='js/main.js') }}"></script>
+
 </head>
-<body>
+<body>  
     <div class="container">
+
+        <div class="title">
+            <h1>Ninja Gold!</h1>
+        </div>
 
         <div class="banner">
             <p>Your Gold</p>
             <p id="balance"> {{ session["gold"] }} </p>
+            <form action="/reset" method="post">
+                <button type="submit">Reset the Game</button>
+            </form>
+            
         </div>
 
         <div class="place-row">
 
             <div class="places" id="farm">
-                <h1>Farm</h1>
+                <h2>Farm</h2>
                 <p>(earns 10-20 gold)</p>
                 <form action="/process_money" method="POST">
                     <input type="hidden" name="place" value="farm">
-                    <input type="submit" value="Find Gold!">
+                    <input type="submit" value="Find Gold!" class="submit-btn">
                 </form>
             </div>
             <div class="places" id="cave">
-                <h1>Cave</h1>
+                <h2>Cave</h2>
                 <p>(earns 5-10 gold)</p>
                 <form action="/process_money" method="POST">
                     <input type="hidden" name="place" value="cave">
-                    <input type="submit" value="Find Gold!">
+                    <input type="submit" value="Find Gold!" class="submit-btn">
                 </form>
             </div>
             <div class="places" id="house">
-                <h1>House</h1>
+                <h2>House</h2>
                 <p>(earns 2-5 gold)</p>
                 <form action="/process_money" method="POST">
                     <input type="hidden" name="place" value="house">
-                    <input type="submit" value="Find Gold!">
+                    <input type="submit" value="Find Gold!" class="submit-btn">
                 </form>
             </div>
             <div class="places" id="casino">
-                <h1>Casino</h1>
+                <h2>Casino</h2>
                 <p>(earns or loses 0-50 gold)</p>
                 <form action="/process_money" method="post">
                     <input type="hidden" name="place" value="casino">
-                    <input type="submit" value="Find Gold!">
+                    <input type="submit" value="Find Gold!" class="submit-btn">
                 </form>
             </div>
 
         </div>
 
-        <div class="activity-log" style="overflow: scroll; height: 200px;">
+        <div class="activity-log">
 
-            {% for entry in session["ledgerList"] %}
-                <p>{{entry}}</p>
-            {% endfor %}
+            {{ session["ledger"]|safe }}
 
         </div>
 
