changed activity log to display in descending order, with most recent activity at the top

--- a/ninja_gold/templates/index.html
+++ b/ninja_gold/templates/index.html
@@ -65,7 +65,9 @@
 
         <div class="activity-log">
 
-            {{ session["ledger"]|safe }}
+            {% for entry in range(session["ledgerList"]|length-1, -1, -1) %}
+                {{ session["ledgerList"][entry]|safe }}
+            {% endfor %}
 
         </div>
 
